--- a/src/main/resources/templates/movieBooking.html
+++ b/src/main/resources/templates/movieBooking.html
@@ -2,7 +2,7 @@
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title th:text="${movie.title}">영화 예약</title>
+    <title th:text="'MegaBox - ' + ${movie.title}">영화 예약</title>
     <link rel="stylesheet" th:href="@{/css/movieBooking.css}">
 </head>
 <body>
