--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>영화 예매 사이트</title>
+    <title>MegaBox - 홈</title>
     <link rel="stylesheet" th:href="@{/css/index.css}">
 </head>
 <body>
