--- a/src/main/resources/templates/movieDetail.html
+++ b/src/main/resources/templates/movieDetail.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title th:text="${movie.title}">영화 상세정보</title>
+    <title th:text="'MegaBox - ' + ${movie.title}">영화 상세정보</title>
     <link rel="stylesheet" href="/css/movieDetail.css">
 </head>
 <body>
